@@ -60,6 +60,8 @@
 #define SCOREP_BACKEND_COMPILER_FUJITSU @SCOREP_COMPILER_FUJITSU@
 #define SCOREP_BACKEND_COMPILER_CLANG   @SCOREP_COMPILER_CLANG@
 
+#define SCOREP_BACKEND_COMPILER_MIC @SCOREP_COMPILER_MIC@
+
 #define SCOREP_BACKEND_COMPILER_VERSION_MAJOR @SCOREP_COMPILER_VERSION_MAJOR@
 #define SCOREP_BACKEND_COMPILER_VERSION_MINOR @SCOREP_COMPILER_VERSION_MINOR@
 
