@@ -60,6 +60,7 @@ Compatibility:
   Additionally, allow for individual flags via
   `((CPP|C|CXX|LD)FLAGS|LIBS)_FOR_BUILD_LIBWRAP`. The latter supersedes the
   previous `LIBCLANG_((CPP|CXX|LD)FLAGS|LIBS)`.
+- Support for Intel MIC platforms is deprecated.
 
 Bugfixes:
 
